--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "url-loader": "^4.1.0",
     "vis-network": "^8.3.1",
     "webpack": "^4.44.1",
+    "webpack-ant-icon-loader": "^1.0.8",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
